# test-cd

./: BUILD.bazel  WORKSPACE  k8s.bzl  main.go  main_test.go
bazel/: BUILD.bazel  bazellib.go  go.bzl  k8s.bzl  secrets.bzl  secrets_test.sh
bazel/cache/: BUILD.bazel  main.go
bazel/templates/: BUILD.bazel  deployment.jsonnet  secrets.jsonnet
bazel/testdata/: BUILD.bazel  golden_secret.json  secret.jsonnet
ci/: BUILD.bazel  README.md  cd.sh  ci.sh  github.go  main.go  test.sh
ci/k8s_test/: status.sh  test_payload.json
ci/logview/: BUILD.bazel  README.md  logview.go  logview_test.go
ci/testdata/: bad_bazel_query_payload.json  cd_payload.json  failure_branch_payload.json  failure_payload.json
ci/tools/: cd_test.sh  check_status.sh  external_ip.sh  live_test.sh  logs.sh
nodejs/: BUILD.bazel  server.js
secrets/: BUILD.bazel  README.md  example.jsonnet  github.jsonnet  kube.jsonnet
