load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("//bazel:go.bzl", "go_http_server")

go_http_server(
    name = "bazel_cache_server",
    args = [
        "--dir=.",
        "--port=8080",
        "--max_size=1",
    ],
    embed = [":cache"],
    enable_uniformity_testing = False,
    # TODO: This should not be public.
    environment_access = {
        # optional
        "production": "internal",  # everything else
        # is restricted
    },
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/yourbase/yourbase/bazel/cache",
    visibility = ["//visibility:private"],
    deps = ["@com_github_buchgr_bazel_remote//cache:go_default_library"],
)

go_binary(
    name = "cache",
    embed = [":go_default_library"],
    importpath = "github.com/yourbase/yourbase/bazel/cache",
    visibility = ["//visibility:public"],
)
