load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["logview.go"],
    importpath = "github.com/yourbase/yourbase/ci/logview",
    visibility = ["//visibility:public"],
    deps = [
        "//servicelocation/elasticloc:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@in_gopkg_olivere_elastic_v5//:go_default_library",
    ],
)

# load("@io_bazel_rules_go//go:def.bzl", "go_path")
#
# go_path(
#     name = "path",
#     deps = [":go_default_library"],
# )

go_test(
    name = "go_default_test",
    srcs = ["logview_test.go"],
    embed = [":go_default_library"],
    importpath = "github.com/yourbase/yourbase/ci/logview",
)
